Phong Model Added

--- a/render_settings.json
+++ b/render_settings.json
@@ -5,20 +5,20 @@
     "samples": 50
   },
   "sphere1": {
-    "radius": 0.35,
-    "position": [0, 1.0, 3.0],
+    "radius": 0.2,
+    "position": [-1, 0.1, 2],
     "rotation": [0.0, 0.0, 0.0],
     "scale": [1.0, 1.0, 1.0]
   },
   "sphere2": {
-    "radius": 0.5,
-    "position": [-1.01, 0.8, 3.0],
+    "radius": 0.3,
+    "position": [-1.01, 0.8, 2.0],
     "rotation": [0.0, 0.0, 0.0],
     "scale": [1.0, 1.0, 1.0]
   },
   "sphere3": {
     "radius": 1,
-    "position": [-2, 0.4, 5.0],
+    "position": [0, 0.4, 4.0],
     "rotation": [0.0, 0.0, 0.0],
     "scale": [1.0, 1.0, 1.0]
   },
@@ -35,13 +35,19 @@
     "scale": [1.0, 1.0, 1.0]
   },
   "light1": {
-    "radius": 0.2,
-    "position": [0, -4.0, 6.0],
+    "radius": 0.1,
+    "position": [0, -3.0, 1.0],
+    "rotation": [0.0, 0.0, 0.0],
+    "scale": [1.0, 1.0, 1.0]
+  },
+  "light2": {
+    "radius": 0.1,
+    "position": [0, 3.0, 1.0],
     "rotation": [0.0, 0.0, 0.0],
     "scale": [1.0, 1.0, 1.0]
   },
   "camera": {
-    "position":  [0.0, 0.5, 0.0],
+    "position":  [0.0, 0.0, 0.0],
     "rotation": [0.0, 0.0, 0.0],
     "scale": [1.0, 1.0, 1.0]
   }
