--- a/render_settings.json
+++ b/render_settings.json
@@ -12,9 +12,10 @@
       "material": "diffuse"
     }, {
       "radius": 0.3,
-      "position": [0.4, 0.5, 2.0],
+      "position": [0.4, 0.5, 1.0],
       "color": [0.0, 1.0, 0.0],
-      "material": "transparent"
+      "material": "transparent",
+      "ior": 1.3
     }, {
       "radius": 1,
       "position": [0, 0.4, 4.0],
@@ -34,18 +35,18 @@
   ],
   "lights": [
     {
-      "radius": 0.1,
+      "radius": 0.01,
       "position": [0, -3.0, 3.0],
       "color": [1.0, 1.0, 1.0]
     },
     {
-      "radius": 0.1,
+      "radius": 0.01,
       "position": [1, 0.0, 3.0],
       "color": [1.0, 1.0, 1.0]
     }
   ],
   "camera": {
-    "position":  [0.0, 0.0, -1.0],
+    "position":  [0.0, 0.0, -2.0],
     "rotation": [0.0, 0.0, 0.0],
     "scale": [1.0, 1.0, 1.0]
   }
