--- a/render_settings.json
+++ b/render_settings.json
@@ -2,14 +2,14 @@
   "renderSettings": {
     "xres": 900,
     "yres": 900,
-    "samples": 1
+    "samples": 5
   },
   "spheres": [
     {
       "radius": 0.9,
-      "position": [-2, 0.1, 2],
+      "position": [-2, 0.1, 6],
       "color": [1.0, 0.0, 0.0],
-      "material": "diffuse"
+      "material": "mirror"
     }, {
       "radius": 0.3,
       "position": [0.4, 0.5, 1.0],
